Homework#4-Completed - issue Fixes

--- a/homework.ipynb
+++ b/homework.ipynb
@@ -732,7 +732,7 @@
       "source": [
         "# YOUR CHANGES HERE\n",
         "\n",
-        "p7 = 7"
+        "p7 = 6"
       ]
     },
     {
@@ -750,7 +750,7 @@
         {
           "data": {
             "text/plain": [
-              "7"
+              "6"
             ]
           },
           "execution_count": 93,
@@ -1470,7 +1470,7 @@
       "source": [
         "# YOUR CHANGES HERE\n",
         "\n",
-        "p18 = 0.125"
+        "p18 = 3"
       ]
     },
     {
@@ -1488,7 +1488,7 @@
         {
           "data": {
             "text/plain": [
-              "0.125"
+              "3"
             ]
           },
           "execution_count": 123,
@@ -1534,16 +1534,7 @@
         {
           "data": {
             "text/plain": [
-              "['horse',\n",
-              " 'dog',\n",
-              " 'dog',\n",
-              " 'tiger',\n",
-              " 'tiger',\n",
-              " 'horse',\n",
-              " 'cow',\n",
-              " 'cat',\n",
-              " 'cat',\n",
-              " 'horse']"
+              "['cow', 'cow', 'tiger', 'cat', 'dog', 'tiger', 'cow', 'cow', 'tiger', 'cat']"
             ]
           },
           "execution_count": 125,
@@ -1568,35 +1559,15 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 126,
       "metadata": {},
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "p20: -2.3412191175782833\n",
-            "q20(p20): -8.136534191343898\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "import numpy as np\n",
         "import scipy.optimize as opt\n",
         "\n",
         "def q20(x):\n",
-        "    return x**4 + 3 * x**3 + 2*x + 5\n",
-        "# Use scipy's minimize_scalar to find the minimum\n",
-        "result = opt.minimize_scalar(q20)\n",
-        "\n",
-        "# The value of x that minimizes q(x)\n",
-        "p20 = result.x\n",
-        "\n",
-        "# The minimum value of q(x)\n",
-        "min_value = result.fun\n",
-        "\n",
-        "print(f\"p20: {p20}\")\n",
-        "print(f\"q20(p20): {min_value}\")"
+        "    return x**4 + 3 * x**3 + 2*x + 5\n"
       ]
     },
     {
@@ -1639,7 +1610,7 @@
       "source": [
         "# YOUR CHANGES HERE\n",
         "\n",
-        "p20 = -1.5"
+        "p20 = -1.18"
       ]
     },
     {
@@ -1657,7 +1628,7 @@
         {
           "data": {
             "text/plain": [
-              "-1.5"
+              "-1.18"
             ]
           },
           "execution_count": 129,
@@ -1677,7 +1648,7 @@
         {
           "data": {
             "text/plain": [
-              "-3.0625"
+              "-0.35031824"
             ]
           },
           "execution_count": 130,
@@ -1704,15 +1675,13 @@
       "execution_count": null,
       "metadata": {},
       "outputs": [],
-      "source": [
-        "NONE"
-      ]
+      "source": []
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "YOUR ANSWER HERE"
+        "NONE"
       ]
     }
   ],
