--- a/homework.ipynb
+++ b/homework.ipynb
@@ -76,7 +76,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 73,
+      "execution_count": 163,
       "metadata": {
         "id": "RWYk7xICmOGe"
       },
@@ -88,7 +88,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 74,
+      "execution_count": 164,
       "metadata": {
         "id": "RJSJeBTwCIUS"
       },
@@ -114,7 +114,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 75,
+      "execution_count": 165,
       "metadata": {
         "id": "PiW8n851CKo8"
       },
@@ -125,7 +125,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 76,
+      "execution_count": 166,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -272,7 +272,7 @@
               "7                    2             2  "
             ]
           },
-          "execution_count": 76,
+          "execution_count": 166,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -294,7 +294,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 77,
+      "execution_count": 167,
       "metadata": {
         "id": "nhdirreg1pyy"
       },
@@ -307,7 +307,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 78,
+      "execution_count": 168,
       "metadata": {},
       "outputs": [
         {
@@ -316,7 +316,7 @@
               "7"
             ]
           },
-          "execution_count": 78,
+          "execution_count": 168,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -345,7 +345,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 79,
+      "execution_count": 169,
       "metadata": {
         "id": "OpJpSZXW2RDO"
       },
@@ -365,7 +365,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 80,
+      "execution_count": 170,
       "metadata": {},
       "outputs": [
         {
@@ -374,7 +374,7 @@
               "0"
             ]
           },
-          "execution_count": 80,
+          "execution_count": 170,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -396,7 +396,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 81,
+      "execution_count": 171,
       "metadata": {},
       "outputs": [
         {
@@ -420,7 +420,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 82,
+      "execution_count": 172,
       "metadata": {
         "id": "vH-PYxIl2zUn"
       },
@@ -440,7 +440,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 83,
+      "execution_count": 173,
       "metadata": {},
       "outputs": [
         {
@@ -449,7 +449,7 @@
               "1"
             ]
           },
-          "execution_count": 83,
+          "execution_count": 173,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -472,7 +472,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 84,
+      "execution_count": 174,
       "metadata": {
         "id": "aNiGYYTg3sbv"
       },
@@ -485,7 +485,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 85,
+      "execution_count": 175,
       "metadata": {},
       "outputs": [
         {
@@ -501,7 +501,7 @@
               "dtype: float64"
             ]
           },
-          "execution_count": 85,
+          "execution_count": 175,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -525,7 +525,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 86,
+      "execution_count": 176,
       "metadata": {
         "id": "qLQyPsen5ExP"
       },
@@ -545,7 +545,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 87,
+      "execution_count": 177,
       "metadata": {},
       "outputs": [
         {
@@ -554,7 +554,7 @@
               "np.float64(2.0)"
             ]
           },
-          "execution_count": 87,
+          "execution_count": 177,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -576,7 +576,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 88,
+      "execution_count": 178,
       "metadata": {},
       "outputs": [
         {
@@ -599,7 +599,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 89,
+      "execution_count": 179,
       "metadata": {
         "id": "8Ply7kvsZ9AB"
       },
@@ -619,7 +619,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 90,
+      "execution_count": 180,
       "metadata": {},
       "outputs": [
         {
@@ -628,7 +628,7 @@
               "2"
             ]
           },
-          "execution_count": 90,
+          "execution_count": 180,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -650,7 +650,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 91,
+      "execution_count": 181,
       "metadata": {},
       "outputs": [
         {
@@ -724,7 +724,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 92,
+      "execution_count": 182,
       "metadata": {
         "id": "0R8DkzA7bEJQ"
       },
@@ -744,7 +744,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 93,
+      "execution_count": 183,
       "metadata": {},
       "outputs": [
         {
@@ -753,7 +753,7 @@
               "6"
             ]
           },
-          "execution_count": 93,
+          "execution_count": 183,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -773,7 +773,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 94,
+      "execution_count": 184,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -791,7 +791,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 95,
+      "execution_count": 185,
       "metadata": {},
       "outputs": [
         {
@@ -800,7 +800,7 @@
               "-1"
             ]
           },
-          "execution_count": 95,
+          "execution_count": 185,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -822,7 +822,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 96,
+      "execution_count": 186,
       "metadata": {
         "id": "O-UvSyhKgofV"
       },
@@ -843,7 +843,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 97,
+      "execution_count": 187,
       "metadata": {},
       "outputs": [
         {
@@ -852,7 +852,7 @@
               "0"
             ]
           },
-          "execution_count": 97,
+          "execution_count": 187,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -863,7 +863,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 98,
+      "execution_count": 188,
       "metadata": {},
       "outputs": [
         {
@@ -872,7 +872,7 @@
               "5"
             ]
           },
-          "execution_count": 98,
+          "execution_count": 188,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -894,7 +894,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 99,
+      "execution_count": 189,
       "metadata": {
         "id": "8BjrglyMiE3f"
       },
@@ -915,7 +915,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 100,
+      "execution_count": 190,
       "metadata": {},
       "outputs": [
         {
@@ -924,7 +924,7 @@
               "0"
             ]
           },
-          "execution_count": 100,
+          "execution_count": 190,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -935,7 +935,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 101,
+      "execution_count": 191,
       "metadata": {},
       "outputs": [
         {
@@ -944,7 +944,7 @@
               "8"
             ]
           },
-          "execution_count": 101,
+          "execution_count": 191,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -966,7 +966,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 102,
+      "execution_count": 192,
       "metadata": {
         "id": "1gp6Tcbh3IZT"
       },
@@ -987,7 +987,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 103,
+      "execution_count": 193,
       "metadata": {},
       "outputs": [
         {
@@ -996,7 +996,7 @@
               "np.float64(3.0)"
             ]
           },
-          "execution_count": 103,
+          "execution_count": 193,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1007,7 +1007,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 104,
+      "execution_count": 194,
       "metadata": {},
       "outputs": [
         {
@@ -1016,7 +1016,7 @@
               "np.float64(33.15484548537714)"
             ]
           },
-          "execution_count": 104,
+          "execution_count": 194,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1040,7 +1040,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 105,
+      "execution_count": 195,
       "metadata": {
         "id": "AfQA658F4QXn"
       },
@@ -1061,7 +1061,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 106,
+      "execution_count": 196,
       "metadata": {},
       "outputs": [
         {
@@ -1070,7 +1070,7 @@
               "0.9102392266268373"
             ]
           },
-          "execution_count": 106,
+          "execution_count": 196,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1081,7 +1081,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 107,
+      "execution_count": 197,
       "metadata": {},
       "outputs": [
         {
@@ -1090,7 +1090,7 @@
               "0.30341307554227914"
             ]
           },
-          "execution_count": 107,
+          "execution_count": 197,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1113,7 +1113,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 108,
+      "execution_count": 198,
       "metadata": {
         "id": "hMx4gfZpkvR2"
       },
@@ -1142,7 +1142,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 109,
+      "execution_count": 199,
       "metadata": {},
       "outputs": [
         {
@@ -1151,7 +1151,7 @@
               "np.float64(2.0)"
             ]
           },
-          "execution_count": 109,
+          "execution_count": 199,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1174,7 +1174,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 110,
+      "execution_count": 200,
       "metadata": {
         "id": "M2wYKVq1k9mU"
       },
@@ -1194,7 +1194,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 111,
+      "execution_count": 201,
       "metadata": {},
       "outputs": [
         {
@@ -1203,7 +1203,7 @@
               "98"
             ]
           },
-          "execution_count": 111,
+          "execution_count": 201,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1225,7 +1225,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 112,
+      "execution_count": 202,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -1237,7 +1237,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 113,
+      "execution_count": 203,
       "metadata": {
         "id": "K1jxw2uFlZQn"
       },
@@ -1259,7 +1259,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 114,
+      "execution_count": 204,
       "metadata": {},
       "outputs": [
         {
@@ -1268,7 +1268,7 @@
               "np.float64(0.6)"
             ]
           },
-          "execution_count": 114,
+          "execution_count": 204,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1279,7 +1279,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 115,
+      "execution_count": 205,
       "metadata": {},
       "outputs": [
         {
@@ -1288,7 +1288,7 @@
               "np.float64(0.4)"
             ]
           },
-          "execution_count": 115,
+          "execution_count": 205,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1299,7 +1299,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 116,
+      "execution_count": 206,
       "metadata": {},
       "outputs": [
         {
@@ -1308,7 +1308,7 @@
               "np.float64(3.0)"
             ]
           },
-          "execution_count": 116,
+          "execution_count": 206,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1319,7 +1319,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 117,
+      "execution_count": 207,
       "metadata": {},
       "outputs": [
         {
@@ -1328,7 +1328,7 @@
               "np.float64(6.8)"
             ]
           },
-          "execution_count": 117,
+          "execution_count": 207,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1352,7 +1352,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 118,
+      "execution_count": 208,
       "metadata": {
         "id": "qETAzrs8l6iU"
       },
@@ -1377,7 +1377,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 119,
+      "execution_count": 209,
       "metadata": {},
       "outputs": [
         {
@@ -1408,7 +1408,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 120,
+      "execution_count": 210,
       "metadata": {
         "id": "r6b4X09smlcz"
       },
@@ -1421,7 +1421,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 121,
+      "execution_count": 211,
       "metadata": {},
       "outputs": [
         {
@@ -1430,7 +1430,7 @@
               "0"
             ]
           },
-          "execution_count": 121,
+          "execution_count": 211,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1462,7 +1462,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 135,
+      "execution_count": 212,
       "metadata": {
         "id": "E8cvcltFq4wn"
       },
@@ -1470,7 +1470,7 @@
       "source": [
         "# YOUR CHANGES HERE\n",
         "\n",
-        "p18 = 0.125"
+        "p18 = 3"
       ]
     },
     {
@@ -1482,16 +1482,16 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 136,
+      "execution_count": 213,
       "metadata": {},
       "outputs": [
         {
           "data": {
             "text/plain": [
-              "0.125"
+              "3"
             ]
           },
-          "execution_count": 136,
+          "execution_count": 213,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1513,7 +1513,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 124,
+      "execution_count": 214,
       "metadata": {
         "id": "CXavfX24nWyL"
       },
@@ -1528,16 +1528,16 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 125,
+      "execution_count": 215,
       "metadata": {},
       "outputs": [
         {
           "data": {
             "text/plain": [
-              "['cow', 'cow', 'tiger', 'cat', 'dog', 'tiger', 'cow', 'cow', 'tiger', 'cat']"
+              "['cow', 'horse', 'cat', 'cow', 'horse', 'cow', 'cat', 'horse', 'cat', 'dog']"
             ]
           },
-          "execution_count": 125,
+          "execution_count": 215,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1559,12 +1559,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 147,
+      "execution_count": 216,
       "metadata": {},
       "outputs": [],
       "source": [
-        "import numpy as np\n",
-        "import scipy.optimize as opt\n",
+        "\n",
         "\n",
         "def q20(x):\n",
         "    return x**4 + 3 * x**3 + 2*x + 5\n"
@@ -1572,7 +1571,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 148,
+      "execution_count": 217,
       "metadata": {},
       "outputs": [
         {
@@ -1602,7 +1601,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 149,
+      "execution_count": 218,
       "metadata": {
         "id": "qHCZc2VFrDfY"
       },
@@ -1610,7 +1609,7 @@
       "source": [
         "# YOUR CHANGES HERE\n",
         "\n",
-        "p20 = -1.186"
+        "p20 = -1.6506"
       ]
     },
     {
@@ -1622,16 +1621,16 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 150,
+      "execution_count": 219,
       "metadata": {},
       "outputs": [
         {
           "data": {
             "text/plain": [
-              "-1.186"
+              "-1.6506"
             ]
           },
-          "execution_count": 150,
+          "execution_count": 219,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1642,16 +1641,16 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 151,
+      "execution_count": 220,
       "metadata": {},
       "outputs": [
         {
           "data": {
             "text/plain": [
-              "-0.3981562607839999"
+              "-4.369488614622272"
             ]
           },
-          "execution_count": 151,
+          "execution_count": 220,
           "metadata": {},
           "output_type": "execute_result"
         }
